# src/models/deployment_event.rs
@@ -4,7 +4,7 @@
  * MultiTool backend API
  *
  * The version of the OpenAPI document: 0.1.0
- *
+ * 
  * Generated by: https://openapi-generator.tech
  */
 
@@ -24,12 +24,7 @@ pub struct DeploymentEvent {
 }
 
 impl DeploymentEvent {
-    pub fn new(
-        created_at: String,
-        event_type: models::DeploymentEventType,
-        id: u64,
-        updated_at: String,
-    ) -> DeploymentEvent {
+    pub fn new(created_at: String, event_type: models::DeploymentEventType, id: u64, updated_at: String) -> DeploymentEvent {
         DeploymentEvent {
             created_at,
             event_type,
@@ -38,3 +33,4 @@ impl DeploymentEvent {
         }
     }
 }
+
